--- a/src/styles/LinkedList.css
+++ b/src/styles/LinkedList.css
@@ -19,7 +19,7 @@
   width: 97vw;
   height: 30vh;
   justify-content: center;
-  align-items:center;
+  align-items: center;
   margin-top: 50px;
   overflow: scroll;
 }
@@ -170,7 +170,6 @@
   display: inline-flex;
   position: relative;
   flex-direction: column;
-  background-color: #f30000;
 }
 
 .list_node {
@@ -213,13 +212,13 @@
 
 @media (max-width: 600px) {
   .title {
-    margin:15px;
+    margin: 15px;
   }
   .list_container {
+    display: flex;
     height: 35vh;
-    /* overflow: scroll; */
-    /* scroll-margin-block-start: 0; */
-    /* margin: 0px 10px; */
+    position: relative;
+    width: 100vw;
   }
 
   .list_container::-webkit-scrollbar {
