--- a/src/styles/Operations.css
+++ b/src/styles/Operations.css
@@ -116,10 +116,12 @@
 
 @media screen and (max-width: 600px) {
   .opertion_select {
-    flex-direction: column;
     align-items: center;
   }
 
+  .search label {
+    text-align: start;
+  }
   .opertion_select label {
     margin-bottom: 10px;
   }
